--- a/nb-NO/index.html
+++ b/nb-NO/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <title>Kodeklubben — Kodeklubben</title>
+    <title>Norsk — Kodeklubben</title>
 
   <style type="text/css">code{white-space: pre;}</style>
   <!--[if lt IE 9]>
@@ -15,7 +15,7 @@
 </head>
 <body>
 <header>
-<div class="title">Kodeklubben</div>
+<div class="title">Norsk</div>
 <div class="logo"><img src="/img/ccno_logo.png"/></div>
 </header>
 <section class="legal">
@@ -23,7 +23,7 @@
 Dette kurset er utviklet av <a href="http://www.kodeklubben.no/">Kodeklubben (http://www.kodeklubben.no/)</a>.
 </div>
 </section>
-<section><h1>Languages</h1><ol class="langs"><li class="lang"><a href="nb-NO/index.html">Norsk</a></li></ol></section>
+<section class="termlist"><h1>Terms</h1><ol><li class="term"><a href="computercraft.1/index.html">ComputerCraft: Datamaskiner i Minecraft</a></li><li class="term"><a href="python.1/index.html">Introduksjon til Python</a></li></ol></section>
 <section class="legal">
 <div>
 Dette kurset er utviklet av <a href="http://www.kodeklubben.no/">Kodeklubben (http://www.kodeklubben.no/)</a>.
