--- a/nb-NO/scratch_cc.1/11/flaksefugl.html
+++ b/nb-NO/scratch_cc.1/11/flaksefugl.html
@@ -81,7 +81,7 @@ Dette kurset er utviklet av <a href="http://www.codeclub.org.uk/">Code Club (htt
 <p><strong>Klikk det grønne flagget.</strong></p>
 <ul>
 <li>Klarer du å kontrollere Flakse med mellomromtasten?</li>
-<li>La du merke til at noen ganger så flytter ikke Flakse seg når du trykker mellomrom? Det er det neste vi skal fikse.</li>
+<li>La du merke til at om du trykker mellomrom flere ganger raskt etterhverandre så flakser Flakse av og til bare en gang? Det er det neste vi skal fikse.</li>
 </ul>
 </section>
 </section>
@@ -91,9 +91,9 @@ Dette kurset er utviklet av <a href="http://www.codeclub.org.uk/">Code Club (htt
 <section id="sjekkliste-2" class="level2 check">
 <h2>Sjekkliste</h2>
 <ul>
-<li>Ta fra hverandre skriptet som starter med <code class="blockgrey">når mellomrom trykkes</code> og legg de til siden. Vi skal bruke klossene igjen straks.</li>
 <li>Lag en ny variabel og kall den <code>flaks</code>. Velg at den bare skal gjelde <code>For denne figuren</code>. Klikk <code>OK</code>. Skjul variabelen ved å ta vekk avhukingen foran variabelen.</li>
-<li><p>Lag et nytt skript ved å bruke klossene du la til siden tidligere:</p>
+<li>Vi skal nå gjøre om på skriptet som starter med <code class="blockgrey">når mellomrom trykkes</code>. Dra i <code class="blockpurple">bytt drakt til Vinger ned</code>-klossen slik at den og klossene under løsner. Legg disse klossene til siden. Vi skal bruke dem igjen straks.</li>
+<li><p>Lag et nytt skript. Legg merke til at klossene du nettopp la til siden kan brukes igjen inne i <code class="blockyellow">gjenta til flaks = 0</code>-løkken:</p>
 <p><img src="d72e2f78e5aa80ce3ff2713e05c4fa67c7b64ce5.png" alt="    når grønt flagg klikkes
     sett [flaks v] til [0]
     bytt drakt til [Vinger opp v]
@@ -110,9 +110,10 @@ Dette kurset er utviklet av <a href="http://www.codeclub.org.uk/">Code Club (htt
             slutt
         slutt
     slutt" /></p></li>
-<li><p>Til slutt, legg til dette skriptet på <code class="blockgrey">når mellomrom trykkes</code>-klossen:</p>
+<li><p>Til slutt, legg følgende skript på <code class="blockgrey">når mellomrom trykkes</code>-klossen som ble til overs tidligere:</p>
 <p><img src="91b37c285ab7dfb0ce7342b14d29e38eae651465.png" alt="    når [mellomrom v] trykkes
     endre [flaks v] med (1)" /></p></li>
+<li><p>Du skal nå ha tre forskjellige skript på Flakse.</p></li>
 </ul>
 </section>
 <section id="test-prosjektet-2" class="level2 flag">
@@ -236,27 +237,8 @@ Dette kurset er utviklet av <a href="http://www.codeclub.org.uk/">Code Club (htt
 <p>Supert, du har laget ferdig din egen enkle versjon av Flappy Bird-spillet.</p>
 <p>Her er noen flere ting du kan prøve:</p>
 </section>
-<section id="utfordring-1-legg-til-rekorder" class="level2 challenge">
-<h2>Utfordring 1: Legg til rekorder</h2>
-<ul>
-<li>Lag en ny variabel og merk av <code>Nett variabel (lagret på nett)</code> boksen. Kall variabelen <code>Rekord</code>.</li>
-<li><p>Når spillet er ferdig må vi sjekke om det er en ny rekord. Det gjør vi ved å endre <code>Tap</code>-skriptet på <code>Rør</code> slik:</p>
-<p><img src="f519f26976c996ce9d9fc4d80cf77c713e851a15.png" alt="    når jeg mottar [Tap v]
-    hvis &lt;(poeng) &gt; (Rekord)&gt; 
-        sett [Rekord v] til (poeng)
-    slutt
-    stopp [andre skript i figuren v]" /></p></li>
-</ul>
-</section>
-<section id="test-prosjektet-6" class="level2 flag">
-<h2>Test prosjektet</h2>
-<p><strong>Klikk det grønne flagget.</strong></p>
-<ul>
-<li>Oppdaterer rekorden seg hver gang du setter ny rekord?</li>
-</ul>
-</section>
-<section id="utfordring-2-legg-til-tyngdekraft" class="level2 challenge">
-<h2>Utfordring 2: Legg til tyngdekraft</h2>
+<section id="utfordring-1-legg-til-tyngdekraft" class="level2 challenge">
+<h2>Utfordring 1: Legg til tyngdekraft</h2>
 <p>Når noe faller på grunn av tyngdekraft øker farten jo lenger fallet varer. Vi skal prøve å etterligne denne måten å falle på.</p>
 <ul>
 <li>Legg til en ny variabel for <code>Flakse</code> som heter <code>løft</code>. Variablen skal gjelde for <code>For denne figuren</code>.</li>
@@ -282,15 +264,15 @@ Dette kurset er utviklet av <a href="http://www.codeclub.org.uk/">Code Club (htt
             vent (0.1) sekunder" /></p></li>
 </ul>
 </section>
-<section id="test-prosjektet-7" class="level2 flag">
+<section id="test-prosjektet-6" class="level2 flag">
 <h2>Test prosjektet</h2>
 <p><strong>Klikk det grønne flagget.</strong></p>
 <ul>
 <li>Faller Flakse fortere jo lenger han detter?</li>
 </ul>
 </section>
-<section id="utfordring-3-fall-ut-av-skjermen" class="level2 challenge">
-<h2>Utfordring 3: Fall ut av skjermen</h2>
+<section id="utfordring-2-fall-ut-av-skjermen" class="level2 challenge">
+<h2>Utfordring 2: Fall ut av skjermen</h2>
 <p>Når spilleren taper vil vi at Flakse faller ned og ut av skjermen.</p>
 <ul>
 <li>Bytt ut <code class="blockgrey">send meldingen Tap</code>-klossen med <code class="blockgrey">send meldingen Fall</code> i skriptet som merker når Flakse kræsjer i kanten eller i et rør. Slett <code class="blockyellow">stopp</code>-klossen på slutten av skriptet.</li>
@@ -310,12 +292,36 @@ Dette kurset er utviklet av <a href="http://www.codeclub.org.uk/">Code Club (htt
 <li><p>Du må også legge til en <code class="blockpurple">vis</code>-kloss samt sette Flakses retning når spillet starter på nytt.</p></li>
 </ul>
 </section>
-<section id="test-prosjektet-8" class="level2 flag">
+<section id="test-prosjektet-7" class="level2 flag">
 <h2>Test prosjektet</h2>
 <p><strong>Klikk det grønne flagget.</strong></p>
 <ul>
 <li>Faller Flakse ut av skjermen når han treffer et rør?</li>
 <li>Flyr Flakse riktig vei når spillet starter igjen?</li>
+</ul>
+</section>
+<section id="utfordring-3-legg-til-rekorder" class="level2 challenge">
+<h2>Utfordring 3: Legg til rekorder</h2>
+<ul>
+<li>Lag en ny variabel og merk av <code>Nett variabel (lagret på nett)</code> boksen. Kall variabelen <code>Rekord</code>.</li>
+<li><p>Når spillet er ferdig må vi sjekke om det er en ny rekord. Det gjør vi ved å endre <code>Tap</code>-skriptet på <code>Rør</code> slik:</p>
+<p><img src="f519f26976c996ce9d9fc4d80cf77c713e851a15.png" alt="    når jeg mottar [Tap v]
+    hvis &lt;(poeng) &gt; (Rekord)&gt; 
+        sett [Rekord v] til (poeng)
+    slutt
+    stopp [andre skript i figuren v]" /></p></li>
+</ul>
+</section>
+<section id="nettvariabler" class="level2 protip">
+<h2>Nettvariabler</h2>
+<p>Nettvariabler gir deg muligheten til å huske ting mellom forskjellige brukere og forskjellige kjøringer av spillet ditt (i motsetning til vanlige variabler hvor verdiene blir nullstilt hver gang du trykker det grønne flagget). Dette er nøyaktig det vi trenger for å huske hva rekorden i spillet er.</p>
+<p>Nettvariabler er fortsatt litt eksperimentelle, og for tiden får ikke nye brukere av Scratch lov til å lage slike variabler. Hvis du ikke får lov til å lage en slik variabel må du hoppe over den siste utfordringen.</p>
+</section>
+<section id="test-prosjektet-8" class="level2 flag">
+<h2>Test prosjektet</h2>
+<p><strong>Klikk det grønne flagget.</strong></p>
+<ul>
+<li>Oppdaterer rekorden seg hver gang du setter ny rekord?</li>
 </ul>
 </section>
 <section id="lagre-prosjektet-ditt-1" class="level2 save">
