Startet kurs for viderekommende med første del av 3d-flakser

--- a/nb-NO/scratch_kurs.2/03/hvor_i_all_verden_c.html
+++ b/nb-NO/scratch_kurs.2/03/hvor_i_all_verden_c.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <title>Norsk — Kodeklubben</title>
+    <title>Hvor i All Verden? Del 3 — Kodeklubben</title>
 
   <style type="text/css">code{white-space: pre;}</style>
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
     <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/index.css">
-  
+    <link rel="stylesheet" href="/css/lesson.css">
+  <link rel="stylesheet" href="/css/scratch.css">
 </head>
 <body>
 <header>
-<div class="title">Norsk</div>
+<div class="level">1.3</div>
+<div class="title">Hvor i All Verden? Del 3</div>
 <div class="logo"><img src="/img/ccno_logo.png"/></div>
 </header>
 <section class="legal">
@@ -23,14 +24,16 @@
 Dette kurset er utviklet av <a href="http://www.kodeklubben.no/">Kodeklubben (http://www.kodeklubben.no/)</a>.
 </div>
 </section>
-<section class="termlist">
-<h1>Terms</h1>
-<ol>
-<li class="term"><a href="scratch.1/index.html">Enkle introduksjonsoppgaver med Scratch</a></li>
-<li class="term"><a href="scratch_cc.1/index.html">Introduksjon til Scratch</a></li>
-<li class="term"><a href="scratch_kurs.2/index.html">Kurs for viderekommende i Scratch</a></li>
-<li class="term"><a href="computercraft.1/index.html">ComputerCraft: Datamaskiner i Minecraft</a></li>
-<li class="term"><a href="python.1/index.html">Introduksjon til Python</a></li></ol></section>
+<section id="introduksjon" class="level1 intro">
+<h1>Introduksjon</h1>
+<p>Bli med på en rundreise i Norge! Vi skal lage et spill hvor du styrer et helikopter rundt omkring et kart over Norge, mens du prøver å raskest mulig finne steder og byer du blir bedt om å besøke.</p>
+<figure>
+<img src="norgestur.png" />
+</figure>
+</section>
+<section id="steg-1-et-norgeskart" class="level1 activity">
+<h1>Steg 1: Et norgeskart</h1>
+</section>
 <section class="legal">
 <div>
 Dette kurset er utviklet av <a href="http://www.kodeklubben.no/">Kodeklubben (http://www.kodeklubben.no/)</a>.
