--- a/nb-NO/scratch_kurs.2/05/3D_flakser_1.html
+++ b/nb-NO/scratch_kurs.2/05/3D_flakser_1.html
@@ -41,16 +41,16 @@ Dette kurset er utviklet av <a href="http://www.kodeklubben.no/">Kodeklubben (ht
 <li>Tegn figuren <strong>Ring</strong>. Jo enklere jo bedre.</li>
 <li>Gi ringfiguren disse skriptene:</li>
 </ul>
-<p><img src="b29b67f449f701a0b5ca5069743343bafaf98429.png" alt="    når jeg mottar [nytt spill v]
+<p><img src="0edeaedf09b769b529126b0a52291ff535572262.png" alt="    når jeg mottar [nytt spill v]
         skjul
         for alltid
-            lag en klon av [meg v]
+            lag klon av [meg v]
             vent (1) sekunder" /></p>
-<p><img src="29e684e94f5e36d9b865c85e142c44359b4f7604.png" alt="    når jeg starter som klon
+<p><img src="828fff058c756a0f11b423a5dfa39ce89445d38e.png" alt="    når jeg starter som klon
         gå til x: (0) y: (0)
         vis
         gjenta (10) ganger
-            endre størrelse med 5
+            endre størrelse med (5)
             vent (0.1) sekunder
         slett denne klonen" /></p>
 <p>Du må også lage et skript som sørger for at meldingen ‘nytt spill’ sendes når det grønne flagget klikkes.</p>
@@ -60,19 +60,19 @@ Dette kurset er utviklet av <a href="http://www.kodeklubben.no/">Kodeklubben (ht
 <ul>
 <li>Hva gjør de to skriptene over? Ser det ut som om ringene kommer mot deg?</li>
 </ul>
-<p>De to skriptene vi har foreløpig er en OK start, men de er ikke gode nok til å virkelig kalles 3D! Tenk litt på hvordan det virker som om noe vokser i størrelse når det kommer mot deg. Når det er langt unna så vokser det ganske sakte, mens når det er nærme så vokser det mye fortere. Dette skal vi få til ved hjelp av en <em>variabel</em> som vi kaller <strong>avstand</strong>. Når <strong>avstand</strong> er stor, så er ringen langt borte, og skal vokse sakte. Når <strong>avstand</strong> er liten så betyr det at ringen er nærme, og den skal vokse fort.</p>
+<p>De to skriptene vi har foreløpig er en OK start, men de er ikke gode nok til å virkelig kalles 3D! Tenk litt på hvordan det virker som om noe vokser i størrelse når det kommer mot deg. Når det er langt unna så vokser det ganske sakte, mens når det er nærme så vokser det mye fortere. Dette skal vi få til ved hjelp av en <em>variabel</em> som vi kaller <code>avstand</code>. Når <code>avstand</code> er stor, så er ringen langt borte, og skal vokse sakte. Når <code>avstand</code> er liten så betyr det at ringen er nærme, og den skal vokse fort.</p>
 </section>
 <section id="sjekkliste-1" class="level2 check">
 <h2>Sjekkliste</h2>
 <ul>
-<li>Lag en variabel som heter <strong>avstand</strong>. Pass på at den kun gjelder ‘for denne figuren’.</li>
+<li>Lag en variabel som heter <code>avstand</code>. Pass på at den kun gjelder ‘for denne figuren’.</li>
 <li>Endre skriptet over til dette:</li>
 </ul>
 <p><code>blocks     når jeg starter som klon         gå til x: (0) y: (0)         vis         sett [avstand v] til (10)         gjenta til ((avstand) &lt; (1))             sett størrelse til ((150) / (avstand)) %             endre [avstand v] med (-0.5)             vent (0.1) sekunder         slett denne klonen</code> + Det kan hende du må endre litt på tallene i skriptet over for at det skal se bra ut. Prøv deg frem!</p>
 </section>
 <section id="utfordring-gjennomsiktig-effekt" class="level2 challenge">
 <h2>Utfordring: Gjennomsiktig effekt</h2>
-<p>Dette er ikke viktig for å kunne fortsette med spillet, men prøv hvis du vil. For at det skal se enda mer ut som at ringene først er langt borte og så nærme, så kan du bruke klossen <code class="blockpurple">endre [gjennomsiktig v] effekt med (25)</code>-klossen for å gjøre ringene mer gjennomsiktig når de er langt borte. Hvor må du putte denne klossen for at det skal se bra ut, og hvilket tall passer bra?</p>
+<p>Dette er ikke viktig for å kunne fortsette med spillet, men prøv hvis du vil. For at det skal se enda mer ut som at ringene først er langt borte og så nærme, så kan du bruke klossen <code class="blockpurple">sett [gjennomsiktig v] effekt til ((100)-((150)/(avstand))</code> for å gjøre ringene mer gjennomsiktig når de er langt borte. Hvilke tall må du putte i denne klossen for at det skal se bra ut?</p>
 </section>
 </section>
 <section id="steg-2-få-ringene-til-å-dukke-opp-tilfeldige-steder" class="level1 activity">
@@ -82,15 +82,15 @@ Dette kurset er utviklet av <a href="http://www.kodeklubben.no/">Kodeklubben (ht
 <h2>Sjekkliste</h2>
 <ul>
 <li><p>Prøv først å endre på blokken som plasserer ring-klonene til</p>
-<p><img src="77fdc772a131c95c6a1a9d1b94da394a168ec372.png" alt="gå til x: ((tilfeldig tall mellom (-100) og (100)) y: ((tilfeldig tall mellom (-100) og (100))))" /></p>
+<p><img src="0a94b860e8ebb5fa34f0124a2f6bbd66199749b9.png" alt="    gå til x: (tilfeldig tall fra (-100) til (100)) y: (tilfeldig tall fra (-100) til (100)))" /></p>
 <p>Det ser ganske bra ut, men ikke helt riktig, eller hva? Det er fordi <em>midtpunktet</em> til ringen er på samme sted hele tiden mens ringen er på vei mot deg. For at det skal se ut som at den suser <em>forbi deg</em> så må du hele tiden flytte på ringen mens den er på vei mot deg. For å få det til å fungere må ringklonen huske hvor den dukket opp til å begynne med.</p></li>
-<li>Lag variabler <strong>ringX</strong> og <strong>ringY</strong>, som <em>kun gjelder for ringfiguren</em></li>
+<li>Lag variabler <code>ringX</code> og <code>ringY</code>, som <em>kun gjelder for ringfiguren</em></li>
 <li><p>Erstatt blokken som først plasserer ringen med dette:</p>
-<p><img src="c3d6a5178b3930f0d8db5a40267dfb5e705cc5d9.png" alt="sett [ringX v] til ((tilfeldig tall mellom (-100) og (100))
-sett [ringY v] til ((tilfeldig tall mellom (-100) og (100))
-gå til x: ((ringX)) y: ((ringY))" /></p>
+<p><img src="4e4c57e498cbf74775b1339a86af9b6706566935.png" alt="    sett [ringX v] til (tilfeldig tall fra (-100) til (100)
+    sett [ringY v] til (tilfeldig tall fra (-100) til (100)
+    gå til x: (ringX) y: (ringY)" /></p>
 <p>Forhåpentligvis har ikke oppførselen til ringene endret seg ennå. For å få midtpunktet til ringene til å flytte på seg mens ringene kommer mot deg kan du putte følgende blokk et sted inni løkken hvor ringen vokser:</p>
-<p><img src="59b56abd2a126dd55b87607e6a740b06d06ecbdb.png" alt="gå til x: (((ringX)/(avstand))) y: (((ringY)/(avstand)))" /></p></li>
+<p><img src="d11fd42fddf2156109db3de65add013aacb4f3e7.png" alt="    gå til x: ((ringX)/(avstand)) y: ((ringY)/(avstand))" /></p></li>
 </ul>
 </section>
 <section id="test-prosjektet-1" class="level2 flag">
@@ -105,34 +105,36 @@ gå til x: ((ringX)) y: ((ringY))" /></p>
 <h2>Sjekkliste</h2>
 <ul>
 <li>Lag en ny figur. Det er best om den er symmetrisk, slik at det kan se ut som om den flyr innover i skjermen uten at det ser teit ut, bruk for eksempel flaggermus-figuren. Kall den <strong>Flakse</strong>.</li>
-<li>Lag to nye variabler, <strong>x</strong> og <strong>y</strong>. La dem gjelde <em>for alle figurer</em>.</li>
+<li>Lag to nye variabler, <code>x</code> og <code>y</code>. La dem gjelde <em>for alle figurer</em>.</li>
 <li>Gi Flakse følgende skript:</li>
 </ul>
-<p><img src="9854034ad5a423823a278ede06db18ef8a814974.png" alt="    når jeg mottar [nytt spill v]
+<p><img src="535693d08a9158377b55d875c2d74a441ad3620f.png" alt="    når jeg mottar [nytt spill v]
         for alltid
             hvis (tast [pil høyre v] trykket)
-                endre [x v] med 10
+                endre [x v] med (10)
                 vent (0.05) sekunder
+                        slutt
             hvis (tast [pil venstre v] trykket)
-                endre [x v] med -10
+                endre [x v] med (-10)
                 vent (0.05) sekunder
+                        slutt
             hvis (tast [pil opp v] trykket)
-                endre [y v] med 10
+                endre [y v] med (10)
                 vent (0.05) sekunder
+                        slutt
             hvis (tast [pil ned v] trykket)
-                endre [y v] med -10
-                vent (0.05) sekunder" /></p>
-<p>Nå endres <strong>x</strong> og <strong>y</strong> når du styrer med piltastene. Vi venter inni hver hvis-test for at <strong>x</strong> og <strong>y</strong> ikke plutselig vokser over alle grenser. Se hva som skjer om vi ikke venter om du vil..</p>
-<p>Nå vil vi at posisjonen til ringene skal endre seg når vi styrer. Det kan vi få til ved å endre på blokken</p>
-<p><img src="3553186d9c917679df8be799bca2bafcc24afe66.png" alt="    gå til x: (((ringX)/(avstand))) y: (((ringY)/(avstand)))" /></p>
-<p>til dette:</p>
-<p><img src="05a3d1e7cf478ecf2030bcc1756dcd1f0289d88a.png" alt="    gå til x: ((((ringX)-(x))/(avstand))) y: ((((ringY - (y))/(avstand)))" /></p>
+                endre [y v] med (-10)
+                vent (0.05) sekunder
+                        slutt" /></p>
+<p>Nå endres <code>x</code> og <code>y</code> når du styrer med piltastene. Vi venter inni hver hvis-test for at <code>x</code> og <code>y</code> ikke plutselig vokser over alle grenser. Se hva som skjer om vi ikke venter om du vil..</p>
+<p>Nå vil vi at posisjonen til ringene skal endre seg når vi styrer. Det kan vi få til ved å endre på blokken <code>blocks     gå til x: ((ringX)/(avstand)) y: ((ringY)/(avstand))</code> til dette:</p>
+<p><img src="e6b7f4131804969740b1423674f73fb9da81f14c.png" alt="    gå til x: (((ringX)-(x))/(avstand)) y: (((ringY) - (y))/(avstand))" /></p>
 <p>Ser det riktig ut nå? Nå er vi igrunn ferdig med det som trengs for å gå videre med del 2. I del 2 skal vi få det til å virke som om Flakse flakser når vi trykker på mellomromstasten, akkurat som i Flappy Bird og Flaksefugl. Prøv deg på disse utfordringene hvis du har mer tid igjen.</p>
 </section>
 <section id="ting-å-prøve" class="level2 try">
 <h2>Ting å prøve</h2>
 <ul>
-<li>Er det mulig å styre figuren gjennom alle ringene? Husk at spillet skal være akkurat passe vanskelig, og hvertfall ikke umulig. Gå gjennom alle skriptene og endre på verdiene slik at spillet er gøy å spille, og at det ser bra ut. Kanskje du må endre på størrelsen til ringen, hvor mye ringene skal vokse, hvor mye <strong>x</strong> og <strong>y</strong> endrer seg når pilene trykkes, hvor lenge vi venter eller noen av de andre verdiene.</li>
+<li>Er det mulig å styre figuren gjennom alle ringene? Husk at spillet skal være akkurat passe vanskelig, og hvertfall ikke umulig. Gå gjennom alle skriptene og endre på verdiene slik at spillet er gøy å spille, og at det ser bra ut. Kanskje du må endre på størrelsen til ringen, hvor mye ringene skal vokse, hvor mye <code>x</code> og <code>y</code> endrer seg når pilene trykkes, hvor lenge vi venter eller noen av de andre verdiene.</li>
 <li>Tegn din egen figur! Flaggermusfiguren er kankjse ikke helt perfekt. Prøv å se om du kan finne noen bilder på nettet du kan bruke, eller tegn din helt egen figur (den burde være et fugleliknende dyr). Husk at det ser mye bedre ut om figuren er symmetrisk. Det er lurt å gi figuren to drakter; en med vingene ned og en med vingene opp. Da kan vi senere få Flakse til å flakse!</li>
 </ul>
 <p>Del 2: + Tyngdekraft og rotasjon + Bakkefiguren følger med + Kollisjon/poeng-deteksjon</p>
