Oppdatert tittelbilde til kroatisk

--- a/scratch/felix_og_herbert/felix_i_herbert.hr.html
+++ b/scratch/felix_og_herbert/felix_i_herbert.hr.html
@@ -12,7 +12,7 @@ function relative(url) {
 Herberta. Ti češ kontrolirati Herberta sa tvojim kompjuter mišem i
 pokušati da izbjegneš Felixa. Što duže uspiješ da izbjegneš Felixa to
 ćeš više bodova dobiti. Ali pazi, gubiš bodove kad te Felix uhvati.</p>
-<p><figure><img src="felix_og_herbert.png" alt=""></figure></p>
+<p><figure><img src="felix_i_herbert.hr.png" alt=""></figure></p>
 </section>
 <section class="activity" id="korak-1-felix-ganja-kompjuter-misa">
 <h1 class="activity" id="korak-1-felix-ganja-kompjuter-misa">Korak 1: Felix ganja kompjuter miša</h1>
