Oppdatert tittelbilde og fikset skrivefeil i Felix i Herbert (kroatisk)

--- a/scratch/felix_og_herbert/felix_i_herbert.hr.html
+++ b/scratch/felix_og_herbert/felix_i_herbert.hr.html
@@ -12,7 +12,7 @@ function relative(url) {
 Herberta. Ti češ kontrolirati Herberta sa tvojim kompjuter mišem i
 pokušati da izbjegneš Felixa. Što duže uspiješ da izbjegneš Felixa to
 ćeš više bodova dobiti. Ali pazi, gubiš bodove kad te Felix uhvati.</p>
-<p><figure><img src="felix_i_herbert.hr.png" alt=""></figure></p>
+<p><figure><img src="felix_i_herbert_hr.png" alt=""></figure></p>
 </section>
 <section class="activity" id="korak-1-felix-ganja-kompjuter-misa">
 <h1 class="activity" id="korak-1-felix-ganja-kompjuter-misa">Korak 1: Felix ganja kompjuter miša</h1>
@@ -23,8 +23,8 @@ pokušati da izbjegneš Felixa. Što duže uspiješ da izbjegneš Felixa to
 <p>Započni novi projekt.</p>
 </li>
 <li>
-<p>Pritisni na <code class="blockmotion">i</code> u <img src="sprite1.png" alt="Sprite1"> kutu od i
-promjeni nazovi figuru <code>Felix</code>.</p>
+<p>Pritisni na <code class="blockmotion">i</code> u kutu od <img src="sprite1.png" alt="Sprite1"> i
+nazovi figuru <code>Felix</code>.</p>
 </li>
 <li>
 <p>Stavi «stil rotiranja» da bude
@@ -271,7 +271,7 @@ ova dva programa:</p>
 </div></div><div class="col-xs-12"><div id="footer" class="clearfix"><div class="license"><p><strong data-i18n="html=layout.license">Licenca</strong><strong>:</strong></p><p><a href="https://github.com/CodeClub/scratch-curriculum/blob/master/LICENSE.md">Code Club World Limited Terms of Service</a></p>
 </div><div class="author"><p><strong data-i18n="html=layout.author">Autor</strong><strong>:</strong></p><p>Prevedeno s <a href="//codeclub.org.uk">Code Club UK</a></p>
 </div><div class="translator"><p><strong data-i18n="html=layout.translator">Prevoditelj</strong><strong>:</strong></p><p>Goran Stene Solomonovic</p>
-</div></div></div></div></div><div class="intro-question modal fade"><div class="modal-dialog"><div class="modal-content"><div class="modal-header"><button type="button" data-dismiss="modal" aria-label="Close" class="close"><span aria-hidden="true">&times;</span></button><h4 data-i18n="html=layout.greeting" class="modal-title">Hei der!</h4></div><div class="modal-body"><p data-i18n="html=layout.askTour">Ser ut som dette er ditt første besøk, vil du ha en omvisning?</p></div><div class="modal-footer"><button data-i18n="html=layout.yes" class="btn btn-success">Ja!</button><button data-dismiss="modal" data-i18n="html=layout.no" class="btn btn-danger">Nei takk</button></div></div></div></div><script src="../../assets/vendor.min.js"></script><script src="../../assets/script.min.js"></script><script>$(document).ready(function(){
+</div></div></div></div></div><script src="../../assets/vendor.min.js"></script><script src="../../assets/script.min.js"></script><script>$(document).ready(function(){
   $('pre').has('code.blocks').addClass('blocks');
   scratchblocks2.load_language(scratchblocks2._translations['hr']);
   scratchblocks2.parse('code.blocks');
