--- a/hvor_er_bussen_min/dro_nettopp.html
+++ b/hvor_er_bussen_min/dro_nettopp.html
@@ -6,7 +6,7 @@
   <body>
     <h1>Hvor er bussen min?</h1>
 
-    <h3>Neste buss kommer om 57 minutter!</h3>
+    <h3>Neste flybuss kommer om 57 minutter!</h3>
     <p>Forrige buss kj&oslash;rte for 1 minutt siden</p>
     <p>Holdeplass: Sundvollen</p>
 
