--- a/hvor_er_bussen_min/kommer_snart.html
+++ b/hvor_er_bussen_min/kommer_snart.html
@@ -6,7 +6,7 @@
   <body>
     <h1>Hvor er bussen min?</h1>
 
-    <h3>Neste buss kommer om 3 minutter!</h3>
+    <h3>Neste flybuss kommer om 3 minutter!</h3>
     <p>Holdeplass: Sundvollen</p>
 
     <img src="http://www.askeladden.net/upload/askeladden.png" />
