--- a/scratch/snurrige_figurer/snurrige_figurer.html
+++ b/scratch/snurrige_figurer/snurrige_figurer.html
@@ -75,6 +75,37 @@ ditt. Kall det for eksempel <code>Snurrige figurer</code>.</p>
 </li>
 </ul>
 </section>
+<section class="try" id="endre-en-eksisterende-figur">
+<h2 class="try" id="endre-en-eksisterende-figur">Endre en eksisterende figur</h2>
+<p>Selv om det ikke finnes en trekant i figurbiblioteket, kan vi gjøre om en av de
+andre figurene til en trekant. Om du allerede har laget en trekant trenger du
+ikke gjøre dette. Men det viser deg en morsom måte å leke med Scratchfigurene
+på.</p>
+<ul>
+<li>
+<p>Klikk på <img src="../bilder/hent-fra-bibliotek.png" alt="Velg figur fra biblioteket"> for å
+hente en eksisterende figur. Velg figuren <code>ting/Star2</code>.</p>
+</li>
+<li>
+<p>Gå til <code>Drakter</code>-fanen. Ser du at denne stjernen består av to trekanter lagt
+oppå hverandre?</p>
+</li>
+<li>
+<p>Klikk på stjernen slik at den får en firkant rundt seg (blir merket). Det
+dukker da opp en ny knapp som kalles <code>Del opp gruppe</code> (se skjermbildet
+under). Klikk på denne knappen.</p>
+<p><figure><img src="del_opp_stjernegruppe.png" alt=""></figure></p>
+</li>
+<li>
+<p>Stjernen har nå blitt delt i to trekant-figurer. Du kan nå klikke på en av
+trekantene, og deretter på <code>delete</code>-tasten på tastaturet for å slette den.</p>
+</li>
+<li>
+<p>Du står nå igjen med en trekant-figur! Bruk gjerne <code>Fyll farge</code>-verktøyet,
+<img src="../bilder/fyll-med-farge.png" alt="Fyll farge"> for å endre farge på trekanten!</p>
+</li>
+</ul>
+</section>
 </section>
 <section class="activity" id="steg-2-mange-trekanter">
 <h1 class="activity" id="steg-2-mange-trekanter">Steg 2: Mange trekanter</h1>
@@ -125,7 +156,7 @@ slutt
 </code></pre>
 </li>
 <li>
-<p>Legg til klossen <code>send melding [snurr v]</code> nederst i <em>B</em>-skriptet (etter
+<p>Legg til klossen <code class="b">send melding [snurr v]</code> nederst i <em>B</em>-skriptet (etter
 <code class="blockcontrol">gjenta</code>-løkken).</p>
 </li>
 </ul>
